# MCProxy

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  test_e2e.sh  test_flow.mjs  test_new_features.mjs  test_tunnel.mjs
server/: Cargo.toml  DEPLOY.md  install-linux.sh  install-mac.sh  install-win.ps1
server/src/: main.rs
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/proxy/: debug_api.rs  lan_scanner.rs  mod.rs  protocol.rs  tunnel.rs
