[package]
name = "mcproxy"
version = "0.1.0"
description = "MCProxy - Minecraft LAN Proxy"
authors = ["nightpoetry"]
edition = "2021"

[lib]
name = "mcproxy_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"

